# TemplateToDoc

./: .gitignore  README.md  pyproject.toml  空管自动化软件设计说明_扩写版.docx
TemplateToDocV2/: README.md
TemplateToDocV2/src/template_to_doc_v2/: cli.py  compat.py  pipeline.py  web.py
src/template_to_doc_v2/: cli.py  compat.py  docx_replace.py  docx_scan.py  llm.py  web.py  yaml_io.py
tests/: test_v2_pipeline.py
